--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,18 @@
         <meta name="description" content="Software Developer">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Muhammad Abd-Elsattar</title>
+        <link rel="stylesheet" type="text/css" href="/styles.css">
 
         <!-- bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        
         <!-- google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body class="mx-auto">
-    
-        <script src="./bundle.js"></script>
+        <main><i class="fa-brands fa-facebook"></i></main>
+        <script src="/bundle.js"></script>
     </body>
 </html>
