--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
         <!-- style -->
         <link rel="stylesheet" type="text/css" href="/styles.css">
-        <link rel="icon" href="/favicon.ico">
+        <link rel="icon" href="/favicon.ico?v=1.1">
 
         <!-- bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
