--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="Software Developer">
+        <meta name="description"
+         content="Hi, I am Muhammad Abd-Elsattar, a Self Taught Full Stack Engineer with a great passion for building web solutions. I've recently developed a REST API and a Real-Time Chat application with Express and SocketIO. I hope to utilize my eagerness for problem-solving in creating robust web applications."
+        >
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Muhammad Abd-Elsattar</title>
 
