Update webpack source maps

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         <title>Muhammad Abd-Elsattar</title>
 
         <!-- style -->
-        <link rel="stylesheet" type="text/css" href="/styles.css">
+        <link rel="stylesheet" type="text/css" href="/main.css">
         <link rel="icon" href="/favicon.png?v=1.1">
 
         <!-- bootstrap -->
