Update user interface

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description"
-         content="Hi, I am Muhammad Abd-Elsattar, a Self Taught Full Stack Engineer with a great passion for building web solutions. I've recently developed a REST API and a Real-Time Chat application with Express and SocketIO. I hope to utilize my eagerness for problem-solving in creating robust web applications."
+         content="Hi, I am Muhammad Abd-Elsattar, a Self Taught Full Stack Engineer with a passion for building web solutions. I've recently developed a REST API and a Real-Time Chat application with Express and SocketIO. I am eager to develop my skills consistently and I am looking forward to creating more robust web applications. Skills: ES6, NodeJS, ReactJS, SQL, NoSQL, HTML5, CSS3."
         >
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Muhammad Abd-Elsattar</title>
